2015-05-01  Antonio Ceballos  <aceballos@gmail.com>

	* src/eval.scm: material info, pawn info and mul as parameters
	instead of glboal variables.
	* src/guile.cc: material info, pawn info and mul as parameters
	instead of glboal variables.
	* src/engine/eval.cpp: material info, pawn info and mul as 
	parameters instead of glboal variables.

2015-04-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/eval.scm: remove unused functions.
	* src/guile.cc: remove unused functions.
	* src/engine/eval.h: remove unused functions.
	* src/engine/eval.cpp: remove unused functions.
	* TODO: update takss.

2015-04-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/script.scm: renamed as src/eval.scm.
	* src/eval.scm: renamed from src/script.scm.
	* src/guile.cc: renamed src/script.scm -> src/eval.scm.

2015-04-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/guile.cc: add file heading.
	* src/script.scm: add file heading.

2015-04-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/engine/eval.h: qualify as extern the functions required by
	Guile primitives.
	* src/engine/eval.cpp: qualify as extern the functions required
	by Guile primitives. Add ancilliary built-in evaluation
	functions.
	* src/guile.cc: add Guile intermediate primitives.
	* src/script.scm: evaluation based on Guile intermediate
	primitives.

2015-04-19  Antonio Ceballos  <aceballos@gmail.com>

	* src/engine/eval.cpp: add eval-guile function and eval-builtin
	primitive.
	* src/engine/eval.h: add eval-guile function and eval-builtin
	primitive.
	* src/script.scm: add eval-guile function, which calls
	eval-builtin.
	* TODO: update tasks.

2015-01-11  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/Makefile.am: compile with HAVE_GUILE.
	* src/frontend/cmd.cc: show 'GUILE enabled' with version info,
	if HAVE_GUILE is defined.

2015-01-11  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: set version 6.2.1a; --enable-guile.
	* src/Makefile.am: compile with HAVE_GUILE.